[package]
name = "enarx"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>", "Daiki Ueno <dueno@redhat.com>"]
edition = "2018"
repository = "https://github.com/enarx/enarx"
description = "Enarx client"
documentation = "https://docs.rs/enarx"
license = "Apache-2.0"
readme = "README.md"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/enarx", workflow = "test" }
#github = { repository = "enarx/enarx", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/enarx" }
is-it-maintained-open-issues = { repository = "enarx/enarx" }

[dependencies]
wasmparser = "0.73"
structopt = "0.3"
tempfile = "3.2"
lebicon = "4.0"
codicon = "3.0"
walkdir = "2.3"
anyhow = "1.0"
tar = "0.4"
